# Blank-Meson-Project-Template

./: README.md  meson.build
scripts/: release.sh  run.sh  test.sh
src/: main.cpp
tests/: meson.build
tests/examples/: example_fail.cc  example_pass.cc
